hphp/test/slow/parser/php-reserved-name-void-2.php.expectf
Fatal error: Cannot use 'HH\Void' as class name as it is reserved in %s on line 4
